--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,20 +3,16 @@
         <title>Oleg's blog</title>
     </head>
     <body>
-        <div>
-            <h1><a href="/">Oleg's blog</a></h1>
-        </div>
+      <div>
+        <h1><a href="/">Django Girls Blog</a></h1>
+      </div>
 
+      {% for post in posts %}
         <div>
-            <p>published: 01.11.2018</p>
-            <h2><a href="">My first post</a></h2>
-            <p>Привет</p>
-        </div>
-
-        <div>
-            <p>published: 01.11.2018</p>
-            <h2><a href="">My second post</a></h2>
-            <p>Пока</p>
-        </div>
+          <p>published: {{ post.published_date }}</p>
+          <h1><a href="">{{ post.title }}</a></h1>
+          <p>{{ post.text|linebreaksbr }}</p>
+    </div>
+{% endfor %}
     </body>
 </html>
